2015-06-21	Autoconfiscated... well, not really.

		configure :
		- initial version; does --srcdir and --prefix

		GNUmakefile :
		- now tries to read from config.cache if present
		- added `distclean', `install', and `uninstall' rules
		- added $(..._FOR_BUILD) variables, for rudimentary support
		  for cross-compilation
		- now uses $(LDLIBS) (and $(LDLIBS_FOR_BUILD)) when linking
		- added support for building outside of source tree, e.g.
		  use of $(VPATH)
		- updated name: helper/postproc.ll -> helper/postproc.lxx

		helper/postproc.lxx :
		- renamed from helper/postproc.ll, to avoid confusion with
		  LLVM files

		.gitignore :
		- added config.cache

2015-06-16	Added some semblance of documentation.

		README.md :
		- added documentation

		helper/postproc.ll :
		- fixed bugs in input parsing and output

2015-06-15	Reorganized directories.  And, junk bytes.

		include/biting-pear/omg.h :
		- moved from biting-pear/ to include/biting-pear/
		- added junk bytes
		- added more types of indirect jumps

		include/biting-pear/lolwut.h ,
		include/biting-pear/kthxbai.h :
		- moved from biting-pear/ to include/biting-pear/
		- kthxbai<> with pointer type now hands over to lolwut<>

		include/biting-pear/bbq.h :
		- moved from biting-pear/ to include/biting-pear/

		test/test-1.ccc :
		- moved from top directory

		.gitignore :
		- initial version

2015-06-14	14 Jun 2015 version.